--- a/locale/ka_GE/locale.po
+++ b/locale/ka_GE/locale.po
@@ -102,7 +102,7 @@ msgstr "მოხმარების პირობები"
 msgid "plugins.generic.pln.settings.terms_of_use_help"
 msgstr ""
 "როგორც ჟურნალის მენეჯერი, კეთილსინდისიერად ვეთანხმები და ვადასტურებ "
-"საზოგადოების ცოდნის პროექტის შენარჩუნების ქსელში (PKP-PN) მონაწილეობის "
+"საზოგადოების ცოდნის პროექტის შენარჩუნების ქსელში (PKP PN) მონაწილეობის "
 "შემდეგ პირობებსა და პირობებს:"
 
 msgid "plugins.generic.pln.settings.terms_of_use_agree"
