--- a/locale/da/locale.po
+++ b/locale/da/locale.po
@@ -334,8 +334,8 @@ msgstr "Jeg er enig"
 msgid "plugins.generic.pln.settings.terms_of_use_help"
 msgstr ""
 "Som tidsskriftschef accepterer og bekræfter jeg i god tro følgende vilkår og "
-"betingelser for deltagelse i Public Knowledge Project's Conservation Network "
-"(PKP-PN):"
+"betingelser for deltagelse i Public Knowledge Project's Preservation Network "
+"(PKP PN):"
 
 msgid "plugins.generic.pln.settings.terms_of_use"
 msgstr "Betingelser for brug"
